--- a/synapsi_challenge/src/styles/main.scss
+++ b/synapsi_challenge/src/styles/main.scss
@@ -13,13 +13,138 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background: rgb(2,0,36);
+    background: linear-gradient(40deg, rgba(2,0,36,1) 0%, rgba(31,206,139,1) 50%); 
+    text-align: center;
+
 }
 
 body,html{
     margin:0%;
     padding: 0%;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .login_Container{
     @include static_BackgroundSize;
+    .h1_Login{
+        font-size:60px;
+        color:rgb(209, 209, 209);
+        text-shadow: 3px 3px 5px black;
+        letter-spacing:2px;
+    }
+    h3{
+        font-size: 20px;
+        letter-spacing:3px;
+        color: rgba(9, 75, 54, 0.911);
+    }
+    .login_inputGroup{
+        padding:7px 10px;
+        box-sizing: border-box;
+        color:rgb(31,206,139);
+        text-shadow: 1px 1px 1px black;
+        background-color: rgba(0, 0, 0, 0.603);
+        border: none;
+        border-left: 2px solid white;
+
+        margin-bottom: 10px;
+    }
+    .btn-custom{
+        background-color:rgb(31,206,139);
+        box-shadow: 6px 6px 13px 1px black;
+        border:none;
+        transition:all 300ms ease-in-out;
+        letter-spacing:2px
+    }
+    .btn-custom:hover{
+        background-color:rgba(0, 0, 0, 0.815);
+        color: rgb(31,206,139);
+        
+        box-shadow: 0px 0px 0px 1px black;
+    }
+    .signup_Link{
+        margin-top: 20px;
+        color: white;
+        transition:all 300ms ease-in-out;
+    }
+    .signup_Link:hover{
+        transform: scale(1.2);
+        text-decoration: none;
+    }
+}
+
+.signup_Container{
+    @include static_BackgroundSize;
+    h3{
+        font-size: 20px;
+        letter-spacing:3px;
+        color: rgba(9, 75, 54, 0.911);
+    }
+    .login_inputGroup{
+        padding:7px 10px;
+        box-sizing: border-box;
+        color:rgb(31,206,139);
+        text-shadow: 1px 1px 1px black;
+        background-color: rgba(0, 0, 0, 0.603);
+        border: none;
+        border-left: 2px solid white;
+
+        margin-bottom: 10px;
+    }
+    .btn-custom{
+        background-color:rgb(31,206,139);
+        box-shadow: 6px 6px 13px 1px black;
+        border:none;
+        transition:all 300ms ease-in-out;
+        letter-spacing:2px
+    }
+    .btn-custom:hover{
+        background-color:rgba(0, 0, 0, 0.815);
+        color: rgb(31,206,139);
+        
+        box-shadow: 0px 0px 0px 1px black;
+    }
+}
+
+.dashboard_Header{
+   @include static_BackgroundSize;
+   flex-direction: row;
+   height:10vh;
+   box-shadow: 10px 0px 30px 0px black inset;
+   color:white;
+
+   letter-spacing:2px;
+   .btn-customLogout{
+      margin-left: 30px;
+      background-color:rgb(31,206,139);
+    padding:4px;
+      border:2px solid white;
+      transition:all 300ms ease-in-out;
+      letter-spacing:2px
+   }
+   .btn-customLogout:hover{
+    background-color:white;
+   }
+}
+.dashboard_Container{
+    background-color:rgba(255, 255, 255, 0.698);
+}
+.sidebard_Container{}
+.info_Chat{
+    color: blue;
+    font-weight: bold;
+    letter-spacing:2px
+}
+.purple_Chat_Info{
+    color: rgb(111, 0, 255);
+    margin-bottom: 30px;
+    h3{
+        color: black;
+    }
+}
+.green_Chat_Info{
+  color:rgb(31,206,139);
+  font-weight: bold;
+  text-shadow: 1px 1px 1px black;
 }
